# iaea.orbs

./: .gitignore  README.md  generate_csv.py  main.py  pyproject.toml  requirements.txt  requrements.txt  utils.py
.github/workflows/: actions.yml
downloaded_CSVs/Fishes/: Fishes_20_256.csv  Fishes_20_257.csv  Fishes_20_258.csv  Fishes_20_259.csv  Fishes_20_260.csv  Fishes_20_261.csv  Fishes_20_262.csv  Fishes_20_265.csv  Fishes_20_266.csv  Fishes_20_267.csv  Fishes_20_268.csv  Fishes_20_269.csv  Fishes_20_270.csv  Fishes_20_271.csv  Fishes_20_272.csv  Fishes_20_273.csv  Fishes_20_274.csv  Fishes_20_275.csv  Fishes_20_276.csv  Fishes_20_277.csv  Fishes_20_278.csv  Fishes_20_279.csv  Fishes_20_280.csv  Fishes_20_281.csv  Fishes_20_282.csv  Fishes_20_283.csv  Fishes_20_284.csv  Fishes_20_285.csv  Fishes_20_293.csv  Fishes_20_294.csv  Fishes_20_295.csv  Fishes_20_296.csv  Fishes_20_297.csv  Fishes_20_298.csv  Fishes_20_299.csv  Fishes_20_300.csv  Fishes_20_301.csv  Fishes_20_302.csv  Fishes_20_303.csv  Fishes_20_325.csv  (+5 more)
downloaded_CSVs/Seawater/: Seawater_10_1.csv  Seawater_10_10.csv  Seawater_10_11.csv  Seawater_10_12.csv  Seawater_10_13.csv  Seawater_10_14.csv  Seawater_10_15.csv  Seawater_10_16.csv  Seawater_10_17.csv  Seawater_10_178.csv  Seawater_10_179.csv  Seawater_10_18.csv  Seawater_10_180.csv  Seawater_10_181.csv  Seawater_10_182.csv  Seawater_10_183.csv  Seawater_10_184.csv  Seawater_10_185.csv  Seawater_10_19.csv  Seawater_10_192.csv  Seawater_10_193.csv  Seawater_10_194.csv  Seawater_10_195.csv  Seawater_10_196.csv  Seawater_10_197.csv  Seawater_10_198.csv  Seawater_10_199.csv  Seawater_10_2.csv  Seawater_10_20.csv  Seawater_10_200.csv  Seawater_10_201.csv  Seawater_10_202.csv  Seawater_10_203.csv  Seawater_10_204.csv  Seawater_10_205.csv  Seawater_10_206.csv  Seawater_10_209.csv  Seawater_10_21.csv  Seawater_10_210.csv  Seawater_10_211.csv  (+142 more)
downloaded_CSVs/Seaweeds/: Seaweeds_30_359.csv  Seaweeds_30_360.csv  (+6 more)
orbs/: download_orbs.py  gererate_json.py  seawater_stations_parsing.py  utils.py
process/: download_orbs.py  generate_csv.py  generate_json.py  seawater_stations_parsing.py
stations/: alps_seawater_data.csv  station_by_id.json  station_points.csv
(+220 files in other folders)
